--- a/about.html
+++ b/about.html
@@ -1170,9 +1170,10 @@
 
 
   <footer class="page-footer">
-    <p>
+    <div>
       Find me on:
-    </p>
+    </div>
+    <br>
     <div class="social-media">
       <a class="social-media__link" href="https://github.com/Estorian" target="_blank">
         <img src="img/github-icon.svg" alt="Github" class="page-footer__social-media-icon">
