--- a/work.html
+++ b/work.html
@@ -79,22 +79,15 @@
         </p>
         <a href="#">See the code on Github</a>
       </div>
-      <div class="project-list__item">
-        <h2>Another web project</h2>
-        <p>
-          This is another generic project that does really cool things and makes
-          it possible to do other things easier.
-        </p>
-        <a href="#">See the code on Github</a>
-      </div>
 
     </div>
 
   <!-- Social media contacts -->
   <footer class="page-footer">
-    <p>
+    <div>
       Find me on:
-    </p>
+    </div>
+    <br>
     <div class="social-media">
       <a class="social-media__link" href="https://github.com/Estorian" target="_blank">
         <img src="img/github-icon.svg" alt="Github" class="page-footer__social-media-icon">
