--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,10 @@
   </div>
 
   <footer class="page-footer">
-    <p>
+    <div>
       Find me on:
-    </p>
+    </div>
+    <br>
     <div class="social-media">
       <a class="social-media__link" href="https://github.com/Estorian" target="_blank">
         <img src="img/github-icon.svg" alt="Github" class="page-footer__social-media-icon">
