--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -35,7 +35,7 @@
   </header>
 
 
-  <div>
+  <div class="contact-info">
     <h1>Contact Me</h1>
     <p>
       Jason Lee<br>
@@ -46,7 +46,7 @@
       <a href="mailto:jason.lee.cultrans@gmail.com">Email me: jason.lee.cultrans@gmail.com</a><br>
       <br>
 
-      <form action="" method="post" id="contact-form">
+      <form action="" method="post" id="contact-form" class="contact-form">
         <label class="standard-label" for="contact-email">E-mail: </label>
         <input type="email" required id="contact-email">
 
