--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -36,12 +36,14 @@
 
   <div class="profile">
     <img src="img/jason-profile-pic.png" alt="A photograph of Jason lee" class="profile__portrait">
-    <h1>
+    <div class="profile__text">
+      <h1>
       Hello there!
-    </h1>
-    <p>My name is Jason Lee.<br>
-    I'm a <span class="paragraph__code">web</span> developer from Colorado.<br>
-    I also play a lot of <span class="paragraph__special-text">D&D</span>.</p><br>
+      </h1>
+      <p>My name is Jason Lee.<br>
+        I'm a <span class="paragraph__code">web</span> developer from Colorado.<br>
+        I also play a lot of <span class="paragraph__special-text">D&D</span>.</p><br>
+      </div>
     <a class="button" href="work.html">See some of my current projects</a>
   </div>
 
