Updating projects page content

--- a/work.html
+++ b/work.html
@@ -42,9 +42,10 @@
       <div class="project-list__item">
         <h2>Portfolio Website</h2>
         <p>
-          This entire website was built using HTML, CSS, and Javascript by me.
+          This entire website (the one you're reading right now) was built using
+          HTML, CSS, and Javascript by me.
         </p>
-        <a href="#">See the code on Github</a>
+        <a href="https://github.com/Estorian/Portfolio-Website">See the code on Github</a>
       </div>
       <div class="project-list__item">
         <h2>D&D Story Management Tool</h2>
@@ -72,12 +73,12 @@
         <a href="#">See the code on Github</a>
       </div>
       <div class="project-list__item">
-        <h2>Another web project</h2>
+        <h2>YOUR web project</h2>
         <p>
-          This is another generic project that does really cool things and makes
-          it possible to do other things easier.
+          Do you have a project you've been looking to start, I'd love to help!
+          Hop on over to my contact page and let's get started.
         </p>
-        <a href="#">See the code on Github</a>
+        <a href="contact.html">Contact Me</a>
       </div>
 
     </div>
