--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -15,7 +15,7 @@
 <body>
 
   <header class="page-header">
-    <img src="img/estoria-press-logo.png" height="40px" width="40px" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
+    <img src="img/estoria-press-logo.png" height="40" width="40" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
     <nav class="page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -25,10 +25,10 @@
           <a href="about.html" role="menuitem" class="navigation-list__item--active">About Me</a>
         </li>
         <li role="presentation">
-          <a href="contact.html"role="menuitem" class="navigation-list__item">Contact</a>
+          <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
         </li>
         <li role="presentation">
-          <a href="work.html"role="menuitem" class="navigation-list__item">Work</a>
+          <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
         </li>
       </ul>
     </nav>
