--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <!-- Logo and Navigation bar -->
   <header class="page-header">
-    <img src="img/estoria-press-logo.png" height="40px" width="40px" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
+    <img src="img/estoria-press-logo.png" height="40" width="40" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
     <nav class="page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -25,10 +25,10 @@
           <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
         </li>
         <li role="presentation">
-          <a href="contact.html"role="menuitem" class="navigation-list__item">Contact</a>
+          <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
         </li>
         <li role="presentation">
-          <a href="work.html"role="menuitem" class="navigation-list__item--active">Work</a>
+          <a href="work.html" role="menuitem" class="navigation-list__item--active">Work</a>
         </li>
       </ul>
     </nav>
@@ -82,6 +82,7 @@
       </div>
 
     </div>
+  </section>
 
   <!-- Social media contacts -->
   <footer class="page-footer">
