--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <a href="mailto:jason.lee.cultrans@gmail.com">Email me: jason.lee.cultrans@gmail.com</a><br>
       <br>
 
-      <form action="" method="post" id="contact-form" class="contact-form">
+      <form action="#" method="post" id="contact-form" class="contact-form">
         <label class="standard-label" for="contact-email">E-mail: </label>
         <input type="email" required id="contact-email">
 
