Updated 10 Candles Project
Updated the work page with a project I made.

--- a/work.html
+++ b/work.html
@@ -57,12 +57,12 @@
         <a href="#">See the code on Github</a>
       </div>
       <div class="project-list__item">
-        <h2>Landing Page with database</h2>
+        <h2>10 Candles Gameplay app</h2>
         <p>
-          This project is designed to collect emails and contact information and
-          agregate them into a data base stored on a server.
+          This project was designed to be used as an online alternative to blowing
+          out physical candles for the tragic horror game "10 Candles."
         </p>
-        <a href="#">See the code on Github</a>
+        <a href="files/10-candles-app/candles.html">See the app</a>
       </div>
       <div class="project-list__item">
         <h2>Another web project</h2>
