--- a/work.html
+++ b/work.html
@@ -48,13 +48,14 @@
         <a href="https://github.com/Estorian/Portfolio-Website">See the code on Github</a>
       </div>
       <div class="project-list__item">
-        <h2>D&D Story Management Tool</h2>
+        <h2>MyFlix</h2>
         <p>
-          This is a website that was designed to help DMs run better games with
-          more succinct story beats.
+          This is a mockup for a imdb-like site that allows for login, 
+          favorite movies, and information about genres and directors. 
+          Frontend built with React-Bootstrap. Backend with Node.
         </p>
-        <a href="#">See how it works</a>
-        <a href="#">See the code on Github</a>
+        <a href="https://github.com/Estorian/myFlix-client">See the frontend code on Github</a>
+        <a href="https://github.com/Estorian/movie_api">See the backend code on Github</a>
       </div>
       <div class="project-list__item">
         <h2>10 Candles Gameplay app</h2>
@@ -65,13 +66,32 @@
         <a href="files/10-candles-app/candles.html">See the app</a>
       </div>
       <div class="project-list__item">
-        <h2>Another web project</h2>
+        <h2>Basic Pokedex App</h2>
         <p>
-          This is another generic project that does really cool things and makes
-          it possible to do other things easier.
+          This is a basic pokedex app that pulls from the Pokemon API to generate
+          a list of pokemon. Written using Javascript and Bootstrap.
         </p>
-        <a href="#">See the code on Github</a>
+        <a href="https://github.com/Estorian/pokedex-js-app">See the code on Github</a>
       </div>
+      <div class="project-list__item">
+        <h2>Meet PWA</h2>
+        <p>
+          This is a Progressive Web App (PWA) that uses Google OAuth2 and Amazon Lambda functions
+          to pull events from a Google Calendar. It is responsive and can function through
+          cached data while offline.
+        </p>
+        <a href="https://estorian.github.io/meet/">See how it works</a>
+        <a href="https://github.com/Estorian/meet">See the code on Github</a>
+      </div>
+      <div class="project-list__item">
+        <h2>Other Github Stuff</h2>
+        <p>
+          If you'd like to see other examples of projects I've done, head on over to
+          my github to see my other repos.
+        </p>
+        <a href="https://github.com/Estorian/">See the code on Github</a>
+      </div>
+      
       <div class="project-list__item">
         <h2>YOUR web project</h2>
         <p>
