--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="page-header">
-    <img src="img/estoria-press-logo.png" height="40" width="40" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
+    <img src="img/estoria-press-logo.png" height="75" width="75" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
     <nav class="page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -38,49 +38,62 @@
   <div class="standard-body">
     <h1 class="standard-body__text">About Me</h1>
 
-    <table hidden>
-      <thead>
-        <tr>
-          <td>Skills</td>
-          <td>Years of Experience</td>
-          <td>Level of Expertice</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Technical Writing</td>
-          <td>6</td>
-          <td>Advanced</td>
-        </tr>
-        <tr>
-          <td>Content Management</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>Python</td>
-          <td>1</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table>
-
     <p class="standard-body__text">
       Hi there. I'm Jason. I graduated in 2014 with a degree in Linguistics and
-      an emphasis in computational linguistics. It was a degree full of
-      knowledge and writing, but little practical application at the time. Since
-      then, I've dabbled in everything from statistical analysis, to technical
-      writing, to starting my own business, and even a few years in marketing.
+      an emphasis in computational linguistics. It taught me the basics of coding
+	  in C++. Most of my jobs after that were more "linguistically" oriented with
+	  an emphasis in writing, design, and marketing. 
       <br><br>
-      Finally, though, it has all come together in the culmination of my life
-      that is... well I guess I'm still figuring that out.
+      In 2020, marketing jobs became scarce, and mine disappeared entirely. That's 
+	  when I decided it was time to dive back into the development side of my life.
+	  I went back to school to learn full stack web development. That brings us to
+	  today.
       <br><br>
       I've spent the last few years working for a few tech companies in
-      different roles and am currently working as a full stack web developer.
-      So if you've got a project in mind, I just might know a guy...
+      different roles. This means that I'm a developer with fine-tuned 
+	  soft skills to help me fit right in with your team. 
     </p>
 
-    <a href="files/Jason-Lee-resume-2020d.pdf" class="button" download>See my resume</a><br>
+    <table>
+		<thead>
+		  <tr>
+			<td style="font-weight: bold;">Technical Proficiencies:</td>
+			<td style="font-weight: bold;">Example Projects:</td>
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<td>Javascript</td>
+			<td>
+				<a href="https://github.com/Estorian/pokedex-js-app">Pokedex App</a>
+			</td>
+		  </tr>
+		  <tr>
+			<td>Node.js</td>
+			<td>
+				<a href="https://github.com/Estorian/movie_api">Movie API</a>
+			</td>
+		  </tr>
+		  <tr>
+			<td>React</td>
+			<td>
+				<a href="https://github.com/Estorian/myFlix-client">React MyFlix client</a>
+			</td>
+		  </tr>
+		  <tr>
+			  <td>React-Native</td>
+			  <td>
+				  <a href="https://github.com/Estorian/react-native-chat-app">React Native Chat app</a>
+			  </td>
+		  </tr>
+		  <tr>
+			  <td>Angular</td>
+			  <td>
+				  <a href="https://github.com/Estorian/myFlix-angular-client">Angular MyFlix Client</a>
+			  </td>
+		  </tr>
+		</tbody>
+	  </table>
 
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     	 viewBox="0 0 1600 1200" style="enable-background:new 0 0 1600 1200;" xml:space="preserve">
@@ -1181,13 +1194,8 @@
       <a class="social-media__link" href="https://www.linkedin.com/in/jason-lee-31106aa6/" target="_blank">
         <img src="img/linkedin-icon.svg" alt="LinkedIn" class="page-footer__social-media-icon">
       </a>
-      <a class="social-media__link" href="Estorian#3117" target="_blank">
-        <img src="img/discord-icon.svg" alt="Discord" class="page-footer__social-media-icon">
-      </a>
     </div>
   </footer>
-
-<script src="js/tota11y.min.js"></script>
 
 </body>
 
