--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="page-header">
-    <img src="img/estoria-press-logo.png" height="40" width="40" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
+    <img src="img/estoria-press-logo.png" height="75" width="75" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
     <nav class="page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -39,25 +39,12 @@
     <h1>Contact Me</h1>
     <p>
       Jason Lee<br>
-      857 E. Southfork Dr.<br>
-      Draper, UT 84020<br>
+      813 W 875 S<br>
+      Lehi, UT 84043<br>
       <br>
       Tel <a href="tel:+13852094204">385.209.4204</a><br>
       <a href="mailto:jason.lee.cultrans@gmail.com">Email me: jason.lee.cultrans@gmail.com</a><br>
       <br>
-
-      <form action="#" method="post" id="contact-form" class="contact-form">
-        <label class="standard-label" for="contact-email">E-mail: </label>
-        <input type="email" required id="contact-email">
-
-        <label class="standard-label" for="contact-tel">Telephone: </label>
-        <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-tel">
-
-        <label class="standard-label" for="contact-message">Message: </label>
-        <textarea required maxlength="240" id="contact-message"></textarea>
-
-        <input type="submit" value="Send Message">
-      </form>
   </div>
 
   <footer class="page-footer">
@@ -72,13 +59,8 @@
       <a class="social-media__link" href="https://www.linkedin.com/in/jason-lee-31106aa6/" target="_blank">
         <img src="img/linkedin-icon.svg" alt="LinkedIn" class="page-footer__social-media-icon">
       </a>
-      <a class="social-media__link" href="Estorian#3117" target="_blank">
-        <img src="img/discord-icon.svg" alt="Discord" class="page-footer__social-media-icon">
-      </a>
     </div>
   </footer>
-
-<script src="js/tota11y.min.js"></script>
 
 </body>
 
