--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-
+<body class="home-page-body">
   <header class="page-header">
-    <img src="img/estoria-press-logo.png" height="40" width="40" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
+    <img src="img/estoria-press-logo.png" height="75" width="75" alt="The logo for Estoria Press, owned by Jason Lee" class="page-header__item">
     <nav class="page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -35,6 +34,7 @@
   </header>
 
   <div class="profile">
+
     <img src="img/jason-profile-pic.png" alt="A photograph of Jason lee" class="profile__portrait">
     <div class="profile__text">
       <h1>
@@ -43,8 +43,9 @@
       <p>My name is Jason Lee.<br>
         I'm a <span class="paragraph__code">web</span> developer from Colorado.<br>
         I also play a lot of <span class="paragraph__special-text">D&D</span>.</p><br>
+        <a class="button" href="work.html">See some of my current projects</a>
       </div>
-    <a class="button" href="work.html">See some of my current projects</a>
+
   </div>
 
   <footer class="page-footer">
@@ -59,14 +60,9 @@
       <a class="social-media__link" href="https://www.linkedin.com/in/jason-lee-31106aa6/" target="_blank">
         <img src="img/linkedin-icon.svg" alt="LinkedIn" class="page-footer__social-media-icon">
       </a>
-      <a class="social-media__link" href="Estorian#3117" target="_blank">
-        <img src="img/discord-icon.svg" alt="Discord" class="page-footer__social-media-icon">
-      </a>
     </div>
   </footer>
-
-<script src="js/tota11y.min.js"></script>
-
+  <div class="home-page-background"></div>
 </body>
 
 </html>
