--- a/work.html
+++ b/work.html
@@ -256,8 +256,8 @@
       <a class="social-media__link" href="https://www.linkedin.com/in/jason-lee-31106aa6/" target="_blank">
         <img src="img/linkedin-icon.svg" alt="LinkedIn" class="page-footer__social-media-icon">
       </a>
-      <a class="social-media__link" href="Estorian#3117" target="_blank">
-        <img src="img/discord-icon.svg" alt="Discord" class="page-footer__social-media-icon">
+      <a class="social-media__link" href="https://twitter.com/JasonLe26813254" target="_blank">
+        <img src="img/twitter-icon.svg" alt="Twitter" class="page-footer__social-media-icon" />
       </a>
     </div>
   </footer>
