--- a/about.html
+++ b/about.html
@@ -1195,7 +1195,7 @@
         <img src="img/linkedin-icon.svg" alt="LinkedIn" class="page-footer__social-media-icon">
       </a>
 	  <a class="social-media__link" href="https://twitter.com/JasonLe26813254" target="_blank">
-        <img src="img/twitter-icon.svg" alt="Twitter" class="page-footer__social-media-icon" />
+        <img src="img/twitter-icon.svg" alt="Twitter" style="height: 25px; width: 25px" class="page-footer__social-media-icon" />
       </a>
     </div>
   </footer>
